--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -4,6 +4,7 @@ flutter_launcher_icons:
   image_path: "assets/app_icon.png"
   adaptive_icon_background: "#ffffff"
   adaptive_icon_foreground: "assets/app_icon.png"
+  remove_alpha_ios: true
   web:
     generate: true
     image_path: "assets/app_icon.png"
