--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.1
+
+dependency_overrides:
+  meta: ^1.9.1
+  js: ^0.6.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
