--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,22 @@ dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.1
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.0
+  dio: ^5.2.1+1
+  auto_route: ^7.7.0
+  url_strategy: ^0.2.0
 
 dependency_overrides:
   meta: ^1.9.1
   js: ^0.6.7
 
 dev_dependencies:
+  build_runner:
   flutter_lints: ^2.0.0
   change_app_package_name: ^1.1.0
   dart_code_metrics: ^5.7.2
+  auto_route_generator: ^7.2.0
 
 flutter:
   uses-material-design: true
