--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dev_dependencies:
   change_app_package_name: ^1.1.0
   dart_code_metrics: ^5.7.2
   auto_route_generator: ^7.2.0
+  test: ^1.24.4
+  bloc_test: ^9.1.3
 
 flutter:
   uses-material-design: true
