--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   equatable: ^2.0.5
   stream_transform: ^2.1.0
   bloc_concurrency: ^0.2.2
+  mocktail: ^0.3.0
 
 dependency_overrides:
   meta: ^1.9.1
