--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   stream_transform: ^2.1.0
   bloc_concurrency: ^0.2.2
   mocktail: ^0.3.0
+  flutter_staggered_grid_view: ^0.6.2
 
 dependency_overrides:
   meta: ^1.9.1
