--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   cached_network_image: ^3.2.3
   shimmer: ^3.0.0
+  golden_toolkit: ^0.15.0
+  flutter_cache_manager: ^3.3.1
 
 dependency_overrides:
   meta: ^1.9.1
@@ -35,7 +37,7 @@ dev_dependencies:
   change_app_package_name: ^1.1.0
   dart_code_metrics: ^5.7.2
   auto_route_generator: ^7.2.0
-  test: ^1.24.4
+  test:
 
 flutter:
   uses-material-design: true
