--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependency_overrides:
   js: ^0.6.7
 
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
   build_runner:
   flutter_lints: ^2.0.0
   change_app_package_name: ^1.1.0
