--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   image_gallery_saver: ^2.0.3
   path: ^1.8.3
   url_launcher: ^6.1.12
-  shared_preferences: ^2.2.0
+  hive: ^2.2.3
+  hive_flutter:
 
 dependency_overrides:
   meta: ^1.9.1
@@ -45,6 +46,7 @@ dev_dependencies:
   dart_code_metrics: ^5.7.2
   auto_route_generator: ^7.2.0
   test:
+  hive_generator:
 
 flutter:
   uses-material-design: true
