--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.15.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.1
   flutter_bloc: ^8.1.3
